preserve view going back, disable tag button when field is empty

--- a/csf_assessment/src/app/components/details/details.component.html
+++ b/csf_assessment/src/app/components/details/details.component.html
@@ -5,7 +5,7 @@
     </td>
   </tr>
   <tr>
-    <td><button [routerLink]="['/']">Back</button></td>
+    <td><button [routerLink]="['/']" (click)="loadState()">Back</button></td>
     <td></td>
     <td><button [routerLink]="['/post']">Post News</button></td>
   </tr>
