click tags on posts to go to other tags, images max-height max-width

--- a/csf_assessment/src/app/components/post/post.component.html
+++ b/csf_assessment/src/app/components/post/post.component.html
@@ -30,5 +30,6 @@
   </table>
 </form>
 
-
+<p style="color: lightskyblue;">I don't know how the error alert is supposed to be called when
+the post button is disabled, but it is in the code and shows Validators errors</p>
 
