--- a/csf_assessment/src/app/components/details/details.component.html
+++ b/csf_assessment/src/app/components/details/details.component.html
@@ -5,6 +5,11 @@
     </td>
   </tr>
   <tr>
+    <td colspan="3">
+      <p style="color: cornflowerblue;">Try clicking the tags!!</p>
+    </td>
+  </tr>
+  <tr>
     <td><button [routerLink]="['/']" (click)="loadState()">Back</button></td>
     <td></td>
     <td><button [routerLink]="['/post']">Post News</button></td>
@@ -14,10 +19,11 @@
       <!-- {{newsList | json}} -->
       <table *ngFor="let n of newsList" border="1" width="500">
         <h4>{{n.title}}</h4>
-        <p>Publish date: {{n.postDate | date}}</p>
-        <img src="{{n.image}}" height="200">
+        <p>Publish date: {{n.postDate | date:'medium'}}</p>
+        <img src="{{n.image}}" style="max-height: 200px; max-width: 500px;">
         <p>{{n.description}}</p>
-        <span *ngFor="let t of n.tags" style="background-color: aliceblue;">{{t}}</span>
+        <span *ngFor="let t of n.tags" style="background-color: aliceblue; margin: 2px;
+        cursor: pointer;" (click)="goToTag(t)">{{t}}</span>
       </table>
     </td>
   </tr>
